AC_PREREQ(2.59)

AC_INIT(thrift, 1.0)

AM_PROG_LEX

AC_PROG_YACC

AM_INIT_AUTOMAKE

AC_CHECK_HEADERS([stddef.h])

AC_CHECK_FUNCS([mkdir])

AC_CHECK_FUNCS([realpath])

AC_CHECK_FUNCS([strdup])

AC_FUNC_MALLOC

AC_FUNC_REALLOC

AC_FUNC_STAT

AC_FUNC_VPRINTF

AC_TYPE_SIZE_T

AC_C_CONST

AC_C_VOLATILE

AC_HEADER_STDBOOL

AC_HEADER_STDC

AC_HEADER_TIME

AC_PROG_CC

AC_PROG_CXX

AC_PROG_INSTALL

AC_PROG_LIBTOOL

CFLAGS="-O2"

CXXFLAGS="-O2"

AC_OUTPUT(Makefile)
